--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
         <meta charset="utf-8">
         <title>Hot Cities - creatives</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
         <style>
             html, body {
                 height: 100%;
+                font: 'Quicksand';
                 overflow: hidden;
+                letter-spacing: 5px;
             }
             #canvas-container {
+                width: 100%;
                 height: 100%;
-                margin: 0;
+                margin: 0 auto;
                 padding: 0;
-                border: 0;
             }
         </style>
     </head>
