p5 sketches moves to thei own folder

--- a/p5/index.html
+++ b/p5/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Hot Cities - creatives</title>
+        <title>p5 creatives | Hot Cities</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
         <style>
